--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -13,6 +13,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:adapter="@{model.adapter}"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </layout>
