--- a/app/src/main/res/layout/row_search.xml
+++ b/app/src/main/res/layout/row_search.xml
@@ -9,8 +9,16 @@
 
     <TextView
         android:id="@+id/tv_bus_number"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         tools:text="Bus number 1" />
+
+    <TextView
+        android:id="@+id/tv_bus_timing"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="15 min" />
 
 </LinearLayout>
