--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="adapter"
+            type="com.happylication.boardthebus.adapters.SearchAdapter" />
         <variable
             name="model"
             type="com.happylication.boardthebus.viewmodel.SearchViewModel" />
@@ -14,18 +17,43 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_search_bus"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:hint="@string/title_search" />
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/search_bar_margin"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="8dp"
+            app:cardCornerRadius="8dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/search_hint"
+                app:hintTextColor="?android:attr/textColorSecondary"
+                app:endIconMode="clear_text"
+                app:endIconDrawable="@drawable/ic_clear_24"
+                app:endIconContentDescription="@string/clear_button_content_description"
+                app:startIconContentDescription="@string/title_search"
+                app:startIconDrawable="@drawable/ic_search_24">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_search_bus"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/search_bar_height"
+                    tools:text="11111" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
             android:layout_weight="1"
-            app:adapter="@{model.adapter}"
+            app:adapter="@{adapter}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     </LinearLayout>
