--- a/app/src/main/res/layout/row_favorites.xml
+++ b/app/src/main/res/layout/row_favorites.xml
@@ -5,12 +5,14 @@
     android:layout_height="?listPreferredItemHeight"
     android:paddingHorizontal="16dp"
     android:paddingVertical="8dp"
+    android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_bus_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/BusServiceNumberText"
         tools:text="Bus number 1" />
 
 </LinearLayout>
