--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondary</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="toolbarStyle">@style/ToolbarStyle</item>
     </style>
