--- a/app/src/main/res/layout/row_search.xml
+++ b/app/src/main/res/layout/row_search.xml
@@ -42,7 +42,7 @@
             android:layout_height="@dimen/estimated_arrival_text_dimens"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/favorite_button_content_description"
-            android:tint="?android:attr/textColorSecondary"
+            android:tint="?colorSecondary"
             app:srcCompat="@drawable/favorite_icon_selector"
             app:checked="@{model.isFavorite}" />
 
