--- a/app/src/main/res/layout/row_favorites.xml
+++ b/app/src/main/res/layout/row_favorites.xml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="?listPreferredItemHeight"
-    android:paddingHorizontal="16dp"
-    android:paddingVertical="8dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/tv_bus_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/BusServiceNumberText"
-        tools:text="Bus number 1" />
+    <data>
+        <variable
+            name="model"
+            type="com.happylication.boardthebus.database.entity.FavoriteBus" />
+    </data>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="?listPreferredItemHeight"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="8dp"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_bus_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{model.busNo}"
+            style="@style/BusServiceNumberText"
+            tools:text="Bus number 1" />
+
+        <TextView
+            android:id="@+id/tv_bus_stop_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{model.busStopNo}"
+            tools:text="83139" />
+
+    </LinearLayout>
+
+</layout>
