Change package name to com.appcessible

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="com.happylication.boardthebus.viewmodel.FavoritesFragmentViewModel" />
+            type="com.appcessible.boardthebus.viewmodel.FavoritesFragmentViewModel" />
     </data>
 
     <androidx.recyclerview.widget.RecyclerView
