--- a/app/src/main/res/layout/row_favorites.xml
+++ b/app/src/main/res/layout/row_favorites.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="com.happylication.boardthebus.database.entity.FavoriteBus" />
+            type="com.appcessible.boardthebus.database.entity.FavoriteBus" />
     </data>
 
     <LinearLayout
