--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,12 +6,12 @@
 
     <fragment
         android:id="@+id/favorites_fragment"
-        android:name="com.happylication.boardthebus.fragment.FavoritesFragment"
+        android:name="com.appcessible.boardthebus.fragment.FavoritesFragment"
         tools:layout="@layout/fragment_favorites" />
 
     <fragment
         android:id="@+id/search_fragment"
-        android:name="com.happylication.boardthebus.fragment.SearchFragment"
+        android:name="com.appcessible.boardthebus.fragment.SearchFragment"
         tools:layout="@layout/fragment_search">
         <argument
             android:name="searchText"
