--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,8 @@
 
     <style name="BusServiceNumberText">
         <item name="android:textSize">20sp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="EstimatedArrivalText">
@@ -11,5 +13,15 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_width">@dimen/estimated_arrival_text_dimens</item>
         <item name="android:layout_height">@dimen/estimated_arrival_text_dimens</item>
+    </style>
+
+    <style name="SearchResultText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@drawable/rounded_corners</item>
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">8dp</item>
     </style>
 </resources>
