--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="adapter"
-            type="com.appcessible.boardthebus.adapters.BusStopAdapter" />
+            type="com.appcessible.boardthebus.adapters.SearchAdapter" />
         <variable
             name="model"
             type="com.appcessible.boardthebus.viewmodel.SearchViewModel" />
