Display bus timings after tapping on bus stop results

--- a/app/src/main/res/layout/row_bus_arrival.xml
+++ b/app/src/main/res/layout/row_bus_arrival.xml
@@ -56,7 +56,7 @@
             android:layout_height="@dimen/estimated_arrival_text_dimens"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/favorite_button_content_description"
-            android:tint="?colorSecondary"
+            app:tint="?colorSecondary"
             app:srcCompat="@drawable/favorite_icon_selector"
             app:checked="@{model.isFavorite}" />
 
