--- a/app/src/main/res/layout/row_favorites.xml
+++ b/app/src/main/res/layout/row_favorites.xml
@@ -42,7 +42,7 @@
             android:contentDescription="@string/favorite_button_content_description"
             app:tint="?colorSecondary"
             app:srcCompat="@drawable/favorite_icon_selector"
-            app:checked="@{model.favorite}" />
+            app:checked="@{true}" />
 
     </LinearLayout>
 
