--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@id/favorites_fragment"
+        android:id="@+id/favorites_fragment"
         android:icon="@drawable/favorite_nav_icon_selector"
         android:title="@string/title_favorites" />
 
     <item
-        android:id="@id/search_fragment"
+        android:id="@+id/search_fragment"
         android:icon="@drawable/search_icon_selector"
         android:title="@string/title_search" />
 
