--- a/app/src/main/res/layout/row_favorites.xml
+++ b/app/src/main/res/layout/row_favorites.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?listPreferredItemHeight"
-        android:paddingHorizontal="16dp"
+        android:paddingStart="16dp"
         android:paddingVertical="8dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
